--- a/pra03.html
+++ b/pra03.html
@@ -4,10 +4,91 @@
 		<meta charset="UTF-8">
 		<title>문제03</title>
 		<style type="text/css">
+		#wrap {
+			width: 500px; height: 400px;
+			display: flex;
+			flex-flow :column;
+			margin: auto;
+			border: 2px solid black;
+			text-align: center;
+			font-size: 20px;
+			font-weight: bold;
+		}
+		
+		.main{
+		
+		display: flex;
+		flex-flow :row;
+		height: 60%;
+		
+		}
+		.main > div{
+		 padding-top:20px;	
+		 border: 1px solid black;
+		}
+		.h{
+			line-height :70px;
+			background: red;
+			height: 20%;
+			border-bottom: 2px solid;
+		}
+		.n{background: #FFCD00;
+		width: 15%;
+		}
+		.s{ background: green;
+			width :60%;
+			display: flex;
+			flex-flow :column;
+		}
+		.s > section >div { 
+		  font-weight: normal;
+		  font-size : 15px;
+		  margin:auto;	
+		  margin : 25px 0 10px 10px;
+		  border: 2px solid black;
+		  width: 90%;
+		  height: 30px;
+		}
+		.a{background: #FFCD00;
+		width: 25%;
+		
+		}
+		.f{background: pink;
+		line-height :65px;
+		height: 20%;
+		border-top: 2px solid;
+		}
+		
+		.sh{background: skyblue;}
+		.sa{background: #FFCD00;}
+		.sf{background: pink;}
 		
 		</style>
 	</head>
 	<body>
-	
+		<div id="wrap">
+			<div class="h">
+				<header> &#8249;header&#8250;</header>
+			</div>
+			<div class="main">
+				<div class="n">
+					<nav >nav</nav>
+				</div>
+				<div class="s">
+					<section>
+						section1
+						<div class="sh">header</div>
+						<div class="sa">article</div>
+						<div class="sf">footer</div>					
+					</section>
+				</div>
+				<div class="a">
+					<aside >aside</aside>
+				</div>
+			</div>
+			<div class="f">
+				<footer>&#8249;footer&#8250;</footer>
+			</div>
+		</div>
 	</body>
 </html>
